arreglo botón recuperar

--- a/RestaurantSigloXXI/Vista/WPFEmpleado.xaml
+++ b/RestaurantSigloXXI/Vista/WPFEmpleado.xaml
@@ -68,7 +68,7 @@
             <Grid>
                 <Label x:Name="label2" Content="Último Respaldo:" HorizontalAlignment="Left" Margin="27,3,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
                 <Label x:Name="lblCache" Content="" HorizontalAlignment="Left" Margin="130,3,0,0" VerticalAlignment="Top" Width="215"/>
-                <Button x:Name="btnCache" ToolTip="Recuperar Caché"  Content="Recuperar" HorizontalAlignment="Left" Margin="474,3,0,0" VerticalAlignment="Top" Width="75" Click="BtnCache_Click" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" FontWeight="Normal"/>
+                <Button x:Name="btnCache" ToolTip="Recuperar Caché"  Content="Recuperar" HorizontalAlignment="Left" Margin="474,3,0,0" VerticalAlignment="Top" Width="75" Click="BtnCache_Click" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" FontWeight="Normal" mah:ControlsHelper.ContentCharacterCasing="Normal"/>
 
             </Grid>
         </GroupBox>
